--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-native-firebase/auth": "^17.5.0",
     "@react-native-firebase/database": "^17.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.10.1",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
